--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
   <script>
     // ==== CONFIG ====
     const CLIENT_ID = '468716163323-st1b43fu76emqlj1cde6mmq770sbeno1.apps.googleusercontent.com';
-    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxPT8eOst4K0hEnnPp25PperIE4XxLEXze9q-jqY_C-Cty0V7l6Fcwxk9osXYvmPXig/exec';
+    const SCRIPT_URL = 'https://get-portal-data-468716163323.us-west3.run.app';
 
     // ==== UTILS & RENDER ====
     function setStatus(msg){ const el = document.getElementById('status'); if (el) el.textContent = msg || ''; }
@@ -189,4 +189,5 @@
 </body>
 
 </html>
+
 
