--- a/public/index.html
+++ b/public/index.html
@@ -51,4 +51,187 @@
 
     <div id="app">
       <div class="grid">
-        <div clas
+        <div class="card"><div class="sub">Member</div><div id="kpi-name" class="kpi">—</div></div>
+        <div class="card"><div class="sub">Current Balance</div><div id="kpi-balance" class="kpi">—</div></div>
+      </div>
+
+      <div class="card" style="margin-top:12px;">
+        <div style="display:flex;justify-content:space-between;align-items:center;">
+          <h3 style="margin:0;font-size:16px;">Transactions by Entity</h3>
+          <div id="updated" class="sub"></div>
+        </div>
+        <div style="overflow:auto;">
+          <table id="tx">
+            <thead>
+              <tr>
+                <th style="width:110px;">Date</th>
+                <th>Description</th>
+                <th class="num" style="width:140px;">Net</th>
+                <th class="num" style="width:160px;">Running Balance</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+            <tfoot></tfoot>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // ==== CONFIG ====
+    const CLIENT_ID = '468716163323-st1b43fu76emqlj1cde6mmq770sbeno1.apps.googleusercontent.com';
+    const API_PATH = '/api/get-portal-data'; // Firebase Hosting rewrite → Cloud Run
+
+    // ==== UTILS & RENDER ====
+    function setStatus(msg){ const el = document.getElementById('status'); if (el) el.textContent = msg || ''; }
+    function parseMoney(v){
+      const raw = String(v ?? '').trim(); if (!raw) return 0;
+      const norm = raw.replace(/[\u2212\u2010-\u2015]/g, '-');
+      const signProbe = norm.replace(/[^\d.\-()]/g, '');
+      const isNeg = /\(.*\)/.test(signProbe) || signProbe.includes('-');
+      const mag = Number(signProbe.replace(/[^0-9.]/g, '')) || 0;
+      return isNeg ? -mag : mag;
+    }
+    const money = n => Number(n||0).toLocaleString(undefined,{minimumFractionDigits:2, maximumFractionDigits:2});
+    const safe  = s => String(s||'').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
+    const asDate = s => new Date(String(s||'').replace(/-/g,'/'));
+    function pickMemberName(rows, fallbackEmail){
+      const fields = ['Member_Name','MemberName','Name','Member'];
+      for (const f of fields){ const r = rows.find(x => x && x[f] && String(x[f]).trim()); if (r) return String(r[f]).trim(); }
+      const q = rows.find(x => x && x.QB_Account && x.QB_Account.includes('-'));
+      if (q){ const last = String(q.QB_Account).split('-').pop().trim(); if (last && /[A-Za-z]/.test(last)) return last; }
+      const local = (fallbackEmail||'').split('@')[0].replace(/\+.*/,'').replace(/[._]/g,' ');
+      return local ? local.replace(/\b\w/g, c => c.toUpperCase()) : 'Member';
+    }
+    function render(data){
+      if (!data || !Array.isArray(data.tx)) {
+        setStatus('We could not determine your Google account. Please sign in.');
+        return;
+      }
+      setStatus('');
+      document.getElementById('app').style.opacity = 1;
+      document.getElementById('app').style.pointerEvents = 'auto';
+
+      const rows = data.tx.map(r=>{
+        const hasNet = r.Net_Amount != null && String(r.Net_Amount).trim() !== '';
+        const netVal = hasNet ? parseMoney(r.Net_Amount) : (parseMoney(r.Credit) - parseMoney(r.Debit));
+        return { date: asDate(r.Date), dateText: r.Date || '', desc: r.Description || '', entity: r.EntityName || '—', net: netVal };
+      });
+
+      const grandTotal = rows.reduce((a, r) => a + r.net, 0);
+
+      document.getElementById('kpi-name').textContent    = pickMemberName(data.tx, data.email || '');
+      document.getElementById('kpi-balance').textContent = money(grandTotal);
+      document.getElementById('updated').textContent     = 'Updated ' + new Date(data.updated).toLocaleString();
+
+      const groups = new Map();
+      for (const it of rows) { if (!groups.has(it.entity)) groups.set(it.entity, []); groups.get(it.entity).push(it); }
+
+      const tb = document.querySelector('#tx tbody'); tb.innerHTML='';
+      const entityNames = Array.from(groups.keys()).sort((a,b)=> a.localeCompare(b));
+
+      for (const name of entityNames) {
+        const list = groups.get(name).sort((a,b)=> a.date - b.date);
+        const eh = document.createElement('tr'); eh.className = 'entity-hdr';
+        eh.innerHTML = `<td colspan="4">${safe(name)}</td>`; tb.appendChild(eh);
+
+        let running = 0;
+        for (const r of list) {
+          running += r.net;
+          const tr = document.createElement('tr');
+          tr.innerHTML = `<td>${safe(r.dateText)}</td><td>${safe(r.desc)}</td>
+                          <td class="num">${money(r.net)}</td><td class="num">${money(running)}</td>`;
+          tb.appendChild(tr);
+        }
+
+        const sub = list.reduce((a, x) => a + x.net, 0);
+        const st = document.createElement('tr'); st.className = 'subtotal';
+        st.innerHTML = `<td></td><td><strong>Subtotal – ${safe(name)}</strong></td>
+                          <td class="num"><strong>${money(sub)}</strong></td>
+                          <td class="num"><strong>${money(running)}</strong></td>`;
+        tb.appendChild(st);
+      }
+
+      const tf = document.querySelector('#tx tfoot'); tf.innerHTML='';
+      const gt = document.createElement('tr'); gt.className = 'grand';
+      gt.innerHTML = `<td></td><td><strong>Grand Total</strong></td>
+                        <td class="num"><strong>${money(grandTotal)}</strong></td>
+                        <td class="num"><strong>${money(grandTotal)}</strong></td>`;
+      tf.appendChild(gt);
+    }
+
+    // ==== Admin helpers ====
+    function showImpersonationBanner(email) {
+      const banner = document.getElementById('impersonationBanner');
+      const span = document.getElementById('impEmail');
+      if (email) { span.textContent = email; banner.style.display = 'inline'; }
+      else { banner.style.display = 'none'; }
+    }
+
+    async function impersonateFlow(idToken) {
+      const target = prompt('Impersonate email:'); if (!target) return;
+      const reason = prompt('Reason (audit):') || '';
+      const adminToken = prompt('Admin token:'); if (!adminToken) return;
+
+      const res = await fetch(API_PATH, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json', 'X-Admin-Token': adminToken },
+        body: JSON.stringify({ idToken, actAs: target, reason })
+      });
+      const data = await res.json();
+      if (data.error) throw new Error(data.error);
+
+      render(data);
+      showImpersonationBanner(data.actingAs !== data.email ? data.actingAs : '');
+    }
+
+    // ==== SIGN-IN & FETCH ====
+    function handleCredentialResponse(resp) {
+      setStatus('Signing in…');
+      document.getElementById('signin').style.display='none';
+
+      fetch(API_PATH, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ idToken: resp.credential })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.error) throw new Error(data.error);
+        render(data);
+
+        // Keep token for impersonation
+        window.lastIdToken = resp.credential;
+
+        // Show impersonation banner if already acting-as
+        showImpersonationBanner(data.actingAs !== data.email ? data.actingAs : '');
+
+        // If admin, reveal tools and wire the button
+        if (data.isAdmin) {
+          const tools = document.getElementById('adminTools');
+          tools.style.display = 'block';
+          document.getElementById('impBtn').onclick = () => impersonateFlow(window.lastIdToken);
+        }
+      })
+      .catch(err => {
+        setStatus(err?.message || 'Sign-in failed');
+        document.getElementById('signin').style.display='inline-block';
+      });
+    }
+
+    function initSignIn() {
+      setStatus('Sign in to view your statement.');
+      google.accounts.id.initialize({
+        client_id: CLIENT_ID,
+        callback: handleCredentialResponse
+      });
+      google.accounts.id.renderButton(
+        document.getElementById('signin'),
+        { type: 'standard', size: 'large', theme: 'outline' }
+      );
+    }
+    window.onload = initSignIn;
+  </script>
+</body>
+</html>
