--- a/public/index.html
+++ b/public/index.html
@@ -1,376 +1,75 @@
-<!doctype html>
-<html>
-<head>
-  <base target="_top">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <style>
-    :root { --navy:#0b2545; --muted:#f5f7fb; --ink:#222; --line:#e9eef6; }
-    * { box-sizing: border-box; }
-    body { font-family: Roboto, sans-serif; margin:0; background:var(--muted); color:var(--ink); }
-    .app-shell { display:flex; min-height:100vh; }
-    .sidebar {
-      width: 230px; background:#fff; border-right:1px solid var(--line);
-      padding:16px 12px; position:sticky; top:0; height:100vh;
-    }
-    .brand { font-weight:700; color:var(--navy); font-size:18px; margin-bottom:16px; }
-    .nav { display:flex; flex-direction:column; gap:6px; }
-    .nav a {
-      text-decoration:none; color:#333; padding:10px 12px; border-radius:10px; display:flex; align-items:center;
-    }
-    .nav a.active { background:#eef3fb; color:#0b3b8f; font-weight:600; }
-    .content { flex:1; padding:20px; }
-    .header { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px; }
-    .title { font-size:22px; font-weight:700; color:var(--navy); }
-    .sub { color:#666; font-size:12px; }
-    .grid { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
-    .card { background:#fff; border-radius:14px; box-shadow:0 1px 6px rgba(0,0,0,.08); padding:16px; }
-    .kpi { font-size:28px; font-weight:700; }
-    table { width:100%; border-collapse:collapse; }
-    th, td { padding:10px 8px; border-bottom:1px solid #eee; vertical-align:top; }
-    th { text-align:left; font-size:12px; color:#666; }
-    td.num { text-align:right; white-space:nowrap; }
-    tr.entity-hdr td { background:#f5f7fb; font-weight:700; border-top:2px solid #e8edf7; }
-    tr.subtotal td { font-weight:700; border-top:2px solid #e8edf7; }
-    tr.grand td { font-weight:800; border-top:3px solid #dbe4f3; }
-    #status { color:#b00; margin:6px 0; min-height:16px; }
-    #signin { display:inline-block; }
-    #app { opacity:0; pointer-events:none; }
-    .page { display:none; }
-    .page.active { display:block; }
-    .toolbar { margin:8px 0; display:none; }
-    .toolbar.visible { display:block; }
-    .link-inline { color:#0b3b8f; text-decoration:none; }
-    .link-inline:hover { text-decoration:underline; }
-    @media (max-width: 900px){
-      .app-shell { flex-direction:column; }
-      .sidebar { height:auto; position:relative; width:auto; border-right:none; border-bottom:1px solid var(--line); }
-    }
-  </style>
-</head>
-<body>
-  <div class="app-shell">
-    <!-- LEFT SIDEBAR -->
-    <aside class="sidebar">
-      <div class="brand">Member Portal</div>
-      <nav class="nav">
-        <a href="#/transactions" id="nav-transactions">Transactions</a>
-        <a href="#/documents" id="nav-documents">Documents</a>
-      </nav>
-    </aside>
+<!-- Google Identity -->
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 
-    <!-- MAIN CONTENT -->
-    <main class="content">
-      <div class="header">
-        <div class="title" id="pageTitle">Transactions</div>
-        <div>
-          <span id="signin"></span>
-        </div>
-      </div>
-
-      <!-- Admin tools -->
-      <div id="adminTools" class="toolbar">
-        <button id="impBtn" type="button">Impersonate</button>
-        <span id="impersonationBanner" class="sub" style="display:none;color:#b00;font-weight:700;margin-left:8px;">
-          Impersonating: <span id="impEmail"></span>
-        </span>
-      </div>
-
-      <div id="status" class="sub"></div>
-
-      <div id="app">
-        <!-- PAGE: TRANSACTIONS -->
-        <section id="page-transactions" class="page active">
-          <div class="grid">
-            <div class="card"><div class="sub">Member</div><div id="kpi-name" class="kpi">—</div></div>
-            <div class="card"><div class="sub">Current Balance</div><div id="kpi-balance" class="kpi">—</div></div>
-          </div>
-
-          <div class="card" style="margin-top:12px;">
-            <div style="display:flex;justify-content:space-between;align-items:center;">
-              <h3 style="margin:0;font-size:16px;">Transactions by Entity</h3>
-              <div id="updated" class="sub"></div>
-            </div>
-            <div style="overflow:auto;">
-              <table id="tx">
-                <thead>
-                  <tr>
-                    <th style="width:110px;">Date</th>
-                    <th>Description</th>
-                    <th class="num" style="width:140px;">Net</th>
-                    <th class="num" style="width:160px;">Running Balance</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-                <tfoot></tfoot>
-              </table>
-            </div>
-          </div>
-        </section>
-
-        <!-- PAGE: DOCUMENTS -->
-        <section id="page-documents" class="page">
-          <div class="card">
-            <div style="display:flex;justify-content:space-between;align-items:center;">
-              <h3 style="margin:0;font-size:16px;">Documents</h3>
-              <div class="sub"><a class="link-inline" href="#/transactions">← Back to Transactions</a></div>
-            </div>
-            <div style="overflow:auto;margin-top:8px;">
-              <table id="docs">
-                <thead>
-                  <tr>
-                    <th>Title</th>
-                    <th style="width:200px;">Entity</th>
-                    <th style="width:260px;">Location</th>
-                    <th style="width:180px;">File</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-            </div>
-          </div>
-        </section>
-      </div>
-    </main>
-  </div>
-
-  <script>
-    // ==== CONFIG ====
-    const CLIENT_ID = '468716163323-st1b43fu76emqlj1cde6mmq770sbeno1.apps.googleusercontent.com';
-    const API_PATH = '/api/get-portal-data'; // Firebase Hosting rewrite → Cloud Run
-
-    // ==== SIMPLE ROUTER ====
-    const routes = {
-      '/transactions': { el: () => document.getElementById('page-transactions'), title: 'Transactions' },
-      '/documents':    { el: () => document.getElementById('page-documents'),    title: 'Documents' }
-    };
-    function setActiveNav(path){
-      document.getElementById('nav-transactions').classList.toggle('active', path === '/transactions');
-      document.getElementById('nav-documents').classList.toggle('active', path === '/documents');
-      document.getElementById('pageTitle').textContent = routes[path]?.title || 'Transactions';
-    }
-    function showPage(path){
-      const keys = Object.keys(routes);
-      keys.forEach(k => routes[k].el().classList.remove('active'));
-      const r = routes[path] || routes['/transactions'];
-      r.el().classList.add('active');
-      setActiveNav(path in routes ? path : '/transactions');
-    }
-    function currentPath(){
-      const h = (location.hash || '#/transactions').replace(/^#/, '');
-      return h || '/transactions';
-    }
-    window.addEventListener('hashchange', () => showPage(currentPath()));
-    // initial state:
-    document.addEventListener('DOMContentLoaded', () => showPage(currentPath()));
-
-    // ==== UTILS & RENDER ====
-    function setStatus(msg){ const el = document.getElementById('status'); if (el) el.textContent = msg || ''; }
-    function parseMoney(v){
-      const raw = String(v ?? '').trim(); if (!raw) return 0;
-      const norm = raw.replace(/[\u2212\u2010-\u2015]/g, '-');
-      const signProbe = norm.replace(/[^\d.\-()]/g, '');
-      const isNeg = /\(.*\)/.test(signProbe) || signProbe.includes('-');
-      const mag = Number(signProbe.replace(/[^0-9.]/g, '')) || 0;
-      return isNeg ? -mag : mag;
-    }
-    const money = n => Number(n||0).toLocaleString(undefined,{minimumFractionDigits:2, maximumFractionDigits:2});
-    const safe  = s => String(s||'').replace(/[&<>"]/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
-    const asDate = s => new Date(String(s||'').replace(/-/g,'/'));
-    function pickMemberName(rows, fallbackEmail){
-      const fields = ['Member_Name','MemberName','Name','Member'];
-      for (const f of fields){ const r = rows.find(x => x && x[f] && String(x[f]).trim()); if (r) return String(r[f]).trim(); }
-      const q = rows.find(x => x && x.QB_Account && x.QB_Account.includes('-'));
-      if (q){ const last = String(q.QB_Account).split('-').pop().trim(); if (last && /[A-Za-z]/.test(last)) return last; }
-      const local = (fallbackEmail||'').split('@')[0].replace(/\+.*/,'').replace(/[._]/g,' ');
-      return local ? local.replace(/\b\w/g, c => c.toUpperCase()) : 'Member';
-    }
-
-    // render both pages from the same payload
-    function render(data){
-      if (!data || !Array.isArray(data.tx)) {
-        setStatus('We could not determine your Google account. Please sign in.');
-        return;
-      }
-      setStatus('');
-      document.getElementById('app').style.opacity = 1;
-      document.getElementById('app').style.pointerEvents = 'auto';
-
-      // ---- Transactions page ----
-      const rows = data.tx.map(r=>{
-        const hasNet = r.Net_Amount != null && String(r.Net_Amount).trim() !== '';
-        const netVal = hasNet ? parseMoney(r.Net_Amount) : (parseMoney(r.Credit) - parseMoney(r.Debit));
-        return { date: asDate(r.Date), dateText: r.Date || '', desc: r.Description || '', entity: r.EntityName || '—', net: netVal };
-      });
-      const grandTotal = rows.reduce((a, r) => a + r.net, 0);
-
-      document.getElementById('kpi-name').textContent    = pickMemberName(data.tx, data.email || '');
-      document.getElementById('kpi-balance').textContent = money(grandTotal);
-      document.getElementById('updated').textContent     = 'Updated ' + new Date(data.updated).toLocaleString();
-
-      const groups = new Map();
-      for (const it of rows) { if (!groups.has(it.entity)) groups.set(it.entity, []); groups.get(it.entity).push(it); }
-
-      const tb = document.querySelector('#tx tbody'); tb.innerHTML='';
-      const entityNames = Array.from(groups.keys()).sort((a,b)=> a.localeCompare(b));
-      for (const name of entityNames) {
-        const list = groups.get(name).sort((a,b)=> a.date - b.date);
-        const eh = document.createElement('tr'); eh.className = 'entity-hdr';
-        eh.innerHTML = `<td colspan="4">${safe(name)}</td>`; tb.appendChild(eh);
-
-        let running = 0;
-        for (const r of list) {
-          running += r.net;
-          const tr = document.createElement('tr');
-          tr.innerHTML = `<td>${safe(r.dateText)}</td><td>${safe(r.desc)}</td>
-                          <td class="num">${money(r.net)}</td><td class="num">${money(running)}</td>`;
-          tb.appendChild(tr);
-        }
-
-        const sub = list.reduce((a, x) => a + x.net, 0);
-        const st = document.createElement('tr'); st.className = 'subtotal';
-        st.innerHTML = `<td></td><td><strong>Subtotal – ${safe(name)}</strong></td>
-                          <td class="num"><strong>${money(sub)}</strong></td>
-                          <td class="num"><strong>${money(running)}</strong></td>`;
-        tb.appendChild(st);
-      }
-      const tf = document.querySelector('#tx tfoot'); tf.innerHTML='';
-      const gt = document.createElement('tr'); gt.className = 'grand';
-      gt.innerHTML = `<td></td><td><strong>Grand Total</strong></td>
-                        <td class="num"><strong>${money(grandTotal)}</strong></td>
-                        <td class="num"><strong>${money(grandTotal)}</strong></td>`;
-      tf.appendChild(gt);
-
-      // ---- Documents page ----
-      const dtb = document.querySelector('#docs tbody');
-      if (dtb) {
-        dtb.innerHTML = '';
-        const docs = Array.isArray(data.docs) ? data.docs : [];
-
-        // Build a URL in priority order: ViewURL → DownloadURL → GoogleFileID
-        const buildDocUrl = d => {
-          const view = (d.ViewURL || '').trim(); if (view) return view;
-          const dl   = (d.DownloadURL || '').trim(); if (dl) return dl;
-          const id   = (d.GoogleFileID || '').trim();
-          return id ? `https://drive.google.com/file/d/${id}/view` : '#';
-        };
-
-        // Sort: try Doc_ID desc if numeric, else by title
-        const num = s => Number(String(s||'').replace(/[^\d.-]/g,'')); 
-        const numericIDs = docs.some(d => !Number.isNaN(num(d.Doc_ID)));
-        docs.sort((a,b) => {
-          if (numericIDs) return num(b.Doc_ID) - num(a.Doc_ID);
-          const ta = String(a.Doc_Title || a.FileName || '').toLowerCase();
-          const tb = String(b.Doc_Title || b.FileName || '').toLowerCase();
-          return ta.localeCompare(tb);
-        });
-
-        for (const d of docs) {
-          const title = d.Doc_Title || d.FileName || 'Document';
-          const url   = buildDocUrl(d);
-          const ent   = d.Entity_Name || d.EntityName || '—';
-          const loc   = d.QB_Location || d.QB_Accounts || '—';
-
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td><a href="${safe(url)}" target="_blank" rel="noopener">${safe(title)}</a></td>
-            <td>${safe(ent)}</td>
-            <td>${safe(loc)}</td>
-            <td>${safe(d.FileName || '')}</td>
-          `;
-          dtb.appendChild(tr);
-        }
-        if (docs.length === 0) {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `<td colspan="4" class="sub">No documents available.</td>`;
-          dtb.appendChild(tr);
-        }
-      }
-    }
-
-    // ==== Admin helpers ====
-    function showImpersonationBanner(email) {
-      const banner = document.getElementById('impersonationBanner');
-      const span = document.getElementById('impEmail');
-      if (email) { span.textContent = email; banner.style.display = 'inline'; }
-      else { banner.style.display = 'none'; }
-    }
-    async function impersonateFlow(idToken) {
-      const target = prompt('Impersonate email:'); if (!target) return;
-      const reason = prompt('Reason (audit):') || '';
-      const adminToken = prompt('Admin token:'); if (!adminToken) return;
-
-      const res = await fetch(API_PATH, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json', 'X-Admin-Token': adminToken },
-        body: JSON.stringify({ idToken, actAs: target, reason })
-      });
-      const data = await res.json();
-      if (data.error) throw new Error(data.error);
-
-      render(data);
-      showImpersonationBanner(data.actingAs !== data.email ? data.actingAs : '');
-    }
-
-    // ==== SIGN-IN & FETCH ====
-    function handleCredentialResponse(resp) {
-      setStatus('Signing in…');
-      document.getElementById('signin').style.display='none';
-
-      fetch(API_PATH, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ idToken: resp.credential })
-      })
-      .then(res => res.json())
-      .then(data => {
-        if (data.error) throw new Error(data.error);
-        render(data);
-
-        // Keep token for impersonation
-        window.lastIdToken = resp.credential;
-
-        // Show impersonation banner if already acting-as
-        showImpersonationBanner(data.actingAs !== data.email ? data.actingAs : '');
-
-        // If admin, reveal tools and wire the button
-        const tools = document.getElementById('adminTools');
-        if (data.isAdmin) {
-          tools.classList.add('visible');
-          document.getElementById('impBtn').onclick = () => impersonateFlow(window.lastIdToken);
-        } else {
-          tools.classList.remove('visible');
-        }
-      })
-      .catch(err => {
-        setStatus(err?.message || 'Sign-in failed');
-        document.getElementById('signin').style.display='inline-block';
-      });
-    }
-
-    function initSignIn() {
-      setStatus('Sign in to view your statement.');
-      google.accounts.id.initialize({
-        client_id: CLIENT_ID,
-        callback: handleCredentialResponse
-      });
-      google.accounts.id.renderButton(
-        document.getElementById('signin'),
-        { type: 'standard', size: 'large', theme: 'outline' }
-      );
-    }
-    window.onload = initSignIn;
-  </script><script>
+<script>
 (function () {
-  function maybeRedirect() {
-    if (location.hash === '#/documents') location.replace('/documents.html');
+  // Your OAuth Web Client ID
+  const WEB_CLIENT_ID =
+    '468716163323-st1b43fu76emqlj1cde6mmq770sbeno1.apps.googleusercontent.com';
+
+  // --- tiny helper for POSTing JSON and being strict about JSON responses ---
+  async function apiPost(path, body) {
+    const r = await fetch(path, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(body)
+    });
+    const ct = r.headers.get('content-type') || '';
+    const text = await r.text();
+    if (!ct.includes('application/json')) {
+      throw new Error(`Non-JSON from ${path}: ${r.status} ${text.slice(0,120)}`);
+    }
+    const j = JSON.parse(text);
+    if (!r.ok || j.error) throw new Error(j.error || `HTTP ${r.status}`);
+    return j;
   }
-  window.addEventListener('hashchange', maybeRedirect);
-  maybeRedirect();
+
+  // Called after Google signs the user in
+  async function afterSignIn(idToken) {
+    // === #1: make the id token available to the whole SPA (Documents uses this) ===
+    window.__idToken = idToken;
+
+    // Load Transactions (keep your existing renderer if present)
+    try {
+      // use the Hosting rewrite to Cloud Run; either /api/get-portal-data or /get-portal-data is fine
+      const data = await apiPost('/api/get-portal-data', { idToken });
+      // hand off to whatever you already use to render transactions
+      if (typeof renderTransactions === 'function') {
+        renderTransactions(data.tx || []);
+      } else {
+        // fallback: stash so your existing code can read it
+        window.__tx = data.tx || [];
+        document.dispatchEvent(new CustomEvent('tx:update', { detail: window.__tx }));
+      }
+    } catch (e) {
+      console.error('[init] load transactions failed:', e);
+    }
+
+    // If user is on the Documents view, load that too (the SPA docs script defines listDocs)
+    try {
+      if (location.hash === '#/documents' && typeof listDocs === 'function') {
+        await listDocs(); // will POST /api/list-docs with window.__idToken
+      }
+    } catch (e) {
+      console.error('[init] listDocs failed:', e);
+    }
+  }
+
+  // Initialize Google Identity on page load and render a button if you have a container
+  window.addEventListener('load', () => {
+    if (!window.google || !google.accounts || !google.accounts.id) return;
+
+    google.accounts.id.initialize({
+      client_id: WEB_CLIENT_ID,
+      callback: (resp) => afterSignIn(resp.credential),
+      auto_select: true,
+      cancel_on_tap_outside: false
+    });
+
+    const btn = document.getElementById('g_id_signin');
+    if (btn) {
+      google.accounts.id.renderButton(btn, { theme: 'outline', size: 'large' });
+    }
+  });
 })();
 </script>
-
-</body>
-</html>
-
