--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!-- Google Identity -->
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+<div id="g_id_signin" style="margin:12px 0"></div>
 
 <script>
 (function () {
@@ -73,3 +74,4 @@
   });
 })();
 </script>
+
